# COMS30115

./: .gitignore  CMakeLists.txt  Extensions.md  Makefile  README.md  job_submit  report.md
resources/meshes/: cornel.mtl
src/: SDLauxiliary.cpp  SDLauxiliary.h  TestModel.cpp  TestModel.h  amath.cpp  amath.h  main.cpp  misc.h
src/light/: light.cpp  light.h  pointlight.cpp  pointlight.h
src/material/: PBRmaterial.cpp  PBRmaterial.h  material.cpp  material.h  phongmaterial.cpp  phongmaterial.h
src/mesh/: mesh.cpp  mesh.h  meshfactory.cpp  meshfactory.h
src/renderer/: antialiasing.cpp  antialiasing.h  rasterizerenderer.cpp  rasterizerenderer.h  rasterizerenderer.inl  raytracerenderer.cpp  raytracerenderer.h  renderer.cpp  renderer.h  rendertarget.cpp  rendertarget.h
src/scene/: Scene.h  camera.cpp  camera.h  scene.cpp  scene.h
src/structs/: KDTree.cpp  KDTree.h  box.cpp  box.h
src/surface/: implicitsurface.h  sphere.cpp  sphere.h
src/texture/: cubemap.h  skycubemap.cpp  skycubemap.h  texture.cpp  texture.h  texturecubemap.cpp  texturecubemap.h
starfield/: .gitignore  Makefile
starfield/Source/: skeleton.cpp
